[package]
name = "auto_pool"
readme = "README.md"
version = "0.3.2"
description = "A simple pool that returns items automatically after it's dropped"
keywords = ["pool", "object-pool", "autoreturn"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = true

[features]
async = ["dep:smol"]

[dependencies]
parking_lot = "0.12"
smol = { version = "2.0", optional = true }
rand = "0.10.0"

[dev-dependencies]
criterion = { version = "0.8" }
lockfree-object-pool = "0.1.6"
object-pool = "0.6.0"
anyhow = "1.0"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
auto_pool = {path = "", features = ["async"]}

[[bench]]
name = "multithread_push_pop"
harness = false
