[package]
name = "ton_lib_cell"
version = "0.0.1"
description = "Cell & BoC"
keywords = ["ton", "the-open-network", "blockchain", "crypto"]
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = true

[dependencies]
fastnum = "0.2"
bitstream-io = "2.6"
thiserror = "2.0"
hex = "0.4"
base64 = "0.22"
log = "0.4"
sha2 = {version = "0.10"}
smallvec = "2.0.0-alpha.10"

[dev-dependencies]
anyhow = "1.0"
tokio-test = "0.4"
tonlib-core = "0.24.2"
criterion = "0.5"
# strongly recomment to enable it for your application
sha2 = {version = "0.10", features = ["asm"]}



[[bench]]
name = "build_cell"
harness = false
