[package]
name = "ton_lib"
version = "0.0.1"
description = "A collection of types and utilities for interacting with the TON network"
keywords = ["ton", "the-open-network", "blockchain", "crypto"]
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = true

[features]
default = ["cell", "tlb", "types"]
cell = ["dep:ton_lib_cell"]
tlb = ["dep:ton_lib_tlb"]
types = ["dep:ton_lib_types"]

[dependencies]
ton_lib_cell = { path = "../cell", optional = true }
ton_lib_tlb = { path = "../tlb", optional = true }
ton_lib_types = { path = "../types", optional = true }
