[package]
name = "ton_lib_tlb"
version = "0.0.1"
description = "serde for TLB entities"
keywords = ["ton", "the-open-network", "blockchain", "crypto"]
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = true

[dependencies]
ton_lib_cell = { path = "../cell" }
hex = "0.4.3"
thiserror = "2.0.11"
anyhow = "1.0.93"

[dev-dependencies]
tokio-test = "0.4"
