[package]
name = "ton_lib_types"
version = "0.0.1"
description = "Hight-level entities"
keywords = ["ton", "the-open-network", "blockchain", "crypto"]
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = true

[dependencies]
ton_lib_cell = { path = "../cell" }
ton_lib_tlb = { path = "../tlb" }
thiserror = "2.0.11"

[dev-dependencies]
anyhow = "1.0"
tokio-test = "0.4"
